tests/samples/negative/functions/lambda_capture_assign.ax
module lambda_capture_assign;

fn main() -> i32 {
    var base: i32 = 1;
    let set_base = [base](value: i32) -> i32 {
        base = value;
        return base;
    };
    return set_base(2);
}
